Merge remote-tracking branch 'origin/master'
# Conflicts:
#	redis/redisDemo/pom.xml
#	redis/redisDemo/src/main/java/Servicre/JedisServiceImpl.java